fixed z-index issues and updated ui

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -62,15 +62,12 @@ body {
     width: 80%;
     max-width: 150px;
     padding: 20px;
-    position: absolute;
-    top: 50%;
 }
 #current-map {
     max-width: 100%;
 }
 #map-container {
-    max-width: vw - 20px;
-    margin-top: 56px;
+    margin-bottom: -30%;
 }
 .main {
     margin-top: 60px;
@@ -115,4 +112,7 @@ p#steps-id {
 }
 #about-main a {
     color: #6610f2;
+}
+#main-ui {
+    z-index: -1000;
 }
